--- a/pressF/pom.xml
+++ b/pressF/pom.xml
@@ -31,6 +31,16 @@
                 </executions>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <configuration>
+                    <javadocExecutable>${java.home}/bin/javadoc
+                    </javadocExecutable>
+                    <source>8</source>
+                </configuration>
+                <version>2.10.3</version>
+            </plugin>
+            <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.3</version>
